# BBU

./: README.md
ExtraStuff/blblblbll/: blblblbll.cbp  blblblbll.depend  blblblbll.layout  main.cpp
Other/blblblbll/: text.txt
Semester 1/Computational logic/: Group_911_Bulat_Jaclina_Iana_Boolean_Functions_7.8_Quine_s_method.pptx  Semantic tableaux (2).pptx
Semester 1/Educational psychology/: Bulat_Jaclina_Iana_ddpd_individual.docx
Semester 2/Data structures and algorithms/: Data Structures and algorithms week 1.txt  ___All_Errors.txt
Semester 2/Data structures and algorithms/Project 4 ADT BAG Hashtable/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  Statement.txt
Semester 2/Data structures and algorithms/Project 5 SortedBag linked representation dynamic allocation/: CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Semester 2/Operating Systems/: Letter.txt  hello.txt  matrix-from-binary.txt  matrix-from-text.txt  matrix-to-bin.txt
Semester 2/Pedagogy fundamentals/: Bulat_Jaclina_Iana.docx  Bulat_Jaclina_Iana_FMI_IE_I_Seminar_Pedagogie_18_03_2022.docx  Despre pedagogie - Immanuel Kant - notite.txt
Semester 3/Computer Networks/: Lab_5_To_Finish.pkt
Semester 5/Parallel and distributed programming/Personal project/: CMakeLists.txt  main.cpp
Semester 5/Parallel and distributed programming/Personal project/domain/: Bill.cpp  Bill.h  Inventory.cpp  Inventory.h  Product.cpp  Product.h
Semester 6/Numerical Calculus/: Lab1.m  (+1 more)
(+902 files in other folders)
